<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_device_info"
            android:icon="@drawable/ic_device"
            android:title="@string/nav_device_information"
            />
        <item
            android:id="@+id/nav_system_perform"
            android:icon="@drawable/ic_device_check"
            android:title="@string/nav_system_performance" />
        <item
            android:id="@+id/nav_memory_info"
            android:icon="@drawable/ic_memory"
            android:title="@string/nav_memory_information" />
        <item
            android:id="@+id/nav_sensor_info"
            android:icon="@drawable/ic_sensor"
            android:title="@string/nav_sensor_information" />
        <item
            android:id="@+id/nav_device_test"
            android:icon="@drawable/ic_inspect"
            android:title="@string/nav_device_testing" />
    </group>
</menu>