<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    tools:context=".ui.fragment.check.ScreenTestFragment"
    >
    <data>
        <variable
            name="click"
            type="kr.co.devicechecker.base.listener.ViewClickListener" />
        <variable
            name="testInfoList"
            type="java.util.List&lt;kr.co.devicechecker.data.dto.IconInfo>" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            >

            <!-- Title -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_audio_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_test"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_audio_test_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_test_s"
                    app:layout_constraintStart_toEndOf="@id/tv_audio_test"
                    app:layout_constraintBottom_toBottomOf="@id/tv_audio_test"
                    android:layout_marginStart="14dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="12dp"
                app:dividerColor="@color/mono400"
                />

            <!-- Screen Test Guide -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_audio_test_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/audio_test_guide"
                android:textSize="14sp"
                android:textColor="@color/mono500"
                android:textStyle="bold"
                android:paddingVertical="8dp"
                />

            <!-- Sensor Info -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_media_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/media_test"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:background="@color/mono300"
                android:textAlignment="textStart"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:layout_marginTop="12dp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_pixel_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:testList="@{testInfoList}"
                app:vClick="@{click}"
                android:orientation="vertical"
                android:layout_marginVertical="8dp"
                />

            <!-- 하단 여백 -->
            <Space
                android:id="@+id/sp_bottom"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/rv_sensor_info"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>