<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    tools:context=".ui.fragment.main.SystemPerformFragment"
    >
    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            >

            <!-- Title -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_system_perform_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_perform_title"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_system_perform_title_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/system_perform_title_s"
                    app:layout_constraintStart_toEndOf="@id/tv_system_perform_title"
                    app:layout_constraintBottom_toBottomOf="@id/tv_system_perform_title"
                    android:layout_marginStart="14dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="12dp"
                app:dividerColor="@color/mono400"
                />

            <!-- System Perform Guide -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_system_perform_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_system_perform_guide"
                android:textSize="14sp"
                android:textColor="@color/mono500"
                android:textStyle="bold"
                android:paddingVertical="8dp"
                />

            <!-- CPU name tag & Architecture -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_cpu_spec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                >
                <!-- tag -->
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_cpu_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="2dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/none"
                    app:cardBackgroundColor="@color/red600"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    >
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tag_cpu"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:paddingHorizontal="24dp"
                        android:paddingVertical="4dp"
                        />
                </com.google.android.material.card.MaterialCardView>

                <!-- info -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_cpu_manufacture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/mono900"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/dv_cpu_info"
                    app:layout_constraintTop_toTopOf="@id/dv_cpu_info"
                    app:layout_constraintBottom_toBottomOf="@id/dv_cpu_info"
                    android:layout_marginEnd="8dp"
                    tools:text="qcom"
                    />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/dv_cpu_info"
                    android:layout_width="1.5dp"
                    android:layout_height="16dp"
                    app:dividerColor="@color/mono900"
                    app:layout_constraintEnd_toStartOf="@id/tv_cpu_architecture"
                    app:layout_constraintTop_toTopOf="@id/tv_cpu_architecture"
                    app:layout_constraintBottom_toBottomOf="@id/tv_cpu_architecture"
                    android:layout_marginHorizontal="8dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_cpu_architecture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/mono900"
                    android:textStyle="bold"
                    tools:text="arm64-v8a"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- CPU Core Info -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cpu_core_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cpu_core_status"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:background="@color/mono300"
                android:textAlignment="textStart"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:layout_marginTop="12dp"
                />

            <!-- CPU Core Cnt Summary -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:paddingHorizontal="4dp"
                android:layout_marginVertical="8dp"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_label_core_cnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_core_cnt"
                    android:textSize="14sp"
                    android:textColor="@color/mono900"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

                <!-- cnt -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_core_cnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/deep_blue800"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/tv_core_unit"
                    app:layout_constraintTop_toTopOf="@id/tv_core_unit"
                    app:layout_constraintBottom_toBottomOf="@id/tv_core_unit"
                    android:layout_marginEnd="12dp"
                    tools:text="4"
                    />

                <!-- unit -->
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_core_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/core_unit"
                    android:textSize="14sp"
                    android:textColor="@color/mono900"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cpu_core_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="8dp"
                />

            <!-- Memory Status Info -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_memory_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memory_status"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:background="@color/mono300"
                android:textAlignment="textStart"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:layout_marginTop="12dp"
                />

            <!-- Memory Monitor -->
            <include
                android:id="@+id/l_memory_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                layout="@layout/item_memory_status"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/gl_horizontal"
                />

            <!-- Memory Status Info -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_battery_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/battery_status"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                android:background="@color/mono300"
                android:textAlignment="textStart"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:layout_marginTop="12dp"
                />

            <!-- battery info -->
            <include
                android:id="@+id/l_battery_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                layout="@layout/item_battery_info"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/gl_horizontal"
                />

            <!-- 하단 여백 -->
            <Space
                android:id="@+id/sp_bottom"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintTop_toBottomOf="@id/rv_sensor_info"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>