<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="checkDto"
            type="kr.co.devicechecker.data.dto.DialogCheck" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/white"
        android:shadowColor="@color/mono50"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{checkDto.title}"
                android:textSize="18sp"
                android:textColor="@color/black"
                tools:text="타이틀"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dialog_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{checkDto.content}"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginVertical="24dp"
                tools:text="내용"
                />
            <!-- 저장소 선택 리사이클러 뷰 -->
            <RadioGroup
                android:id="@+id/rg_type_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:theme="@style/RadioGroup.DeviceChecker"
                >
                <RadioButton
                    android:id="@+id/rb_type_text"
                    android:text="@string/txt_save_info_type1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/rb_type_html"
                    android:text="@string/txt_save_info_type2"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
                <RadioButton
                    android:id="@+id/rb_type_json"
                    android:text="@string/txt_save_info_type3"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </RadioGroup>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingVertical="8dp"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{checkDto.cancel}"
                    android:textSize="14sp"
                    android:textColor="@color/mono600"
                    android:backgroundTint="@color/none"
                    android:background="@color/none"
                    tools:text="취소"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{checkDto.check}"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:backgroundTint="@color/none"
                    android:background="@color/none"
                    tools:text="확인"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</layout>
